--- a/index.html
+++ b/index.html
@@ -2,3 +2,60 @@
 layout: default
 title: Home
 ---
+
+<div
+ class="main-banner wow fadeIn"
+ id="top"
+ data-wow-duration="1s"
+ data-wow-delay="0.5s"
+>
+ <div class="container">
+  <div class="row">
+   <div class="col-lg-12">
+    <div class="row">
+     <div class="col-lg-6 align-self-center">
+      <div
+       class="left-content show-up header-text wow fadeInLeft"
+       data-wow-duration="1s"
+       data-wow-delay="1s"
+      >
+       <div class="row">
+        <div class="col-lg-12">
+         <!-- <h6>Sustainable Multi disciplinary</h6> -->
+         <h2>De-industrialization anti-industrialism</h2>
+         <p>
+          We are a Startup based out of Visakhapatnam India Working in
+          sustainable multidisciplinary verticals Such as Health Care Point of
+          Care Therapeutic Applications, Automotive, Clean Energy,2d & 3d
+          Advanced Materials (Graphene, CNT, Mxenes), Bio Materials, Nano
+          Materials, MEMS, Semiconductors, Circular Economy, Energy Storage,
+          Renewable Energy, Carbon Capture Storage, Hydrogen Fuel Cell Vehicles
+          to reduce the carbon footprint for Existing internal combustion engine
+          vehicles creating a viable ecosystem.
+         </p>
+        </div>
+        <div class="col-lg-12">
+         <div class="border-first-button scroll-to-section">
+          <a href="#contact">Contact Us</a>
+         </div>
+        </div>
+       </div>
+      </div>
+     </div>
+     <div class="col-lg-6">
+      <div
+       class="right-image wow fadeInRight"
+       data-wow-duration="1s"
+       data-wow-delay="0.5s"
+      >
+       <img
+        src="./assets/images/powerPlant.jpg"
+        alt="https://pixabay.com/photos/power-plant-air-pollution-6698838/"
+       />
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
