--- a/index.html
+++ b/index.html
@@ -59,3 +59,362 @@ title: Home
   </div>
  </div>
 </div>
+
+<div id="portfolio" class="our-portfolio section">
+ <div class="container">
+  <div class="row">
+   <div class="col-lg-10">
+    <div
+     class="section-heading wow fadeInLeft"
+     data-wow-duration="1s"
+     data-wow-delay="0.3s"
+    >
+     <!-- <h6>Our Portofolio</h6> -->
+     <h4>Industries producing Carbon Emissions</h4>
+     <div class="line-dec"></div>
+     <div>
+      <br />
+      Carbon and other toxic gaseous, materials capturing by building
+      Infrastructure and Catalysts to fight Industrial Pollution, Global
+      Warming, Fossil Fuels, Oil Exploitation, and Climate Change reducing the
+      number of greenhouse gases in our atmosphere to mitigate global warming
+      and its associated impacts is a task that all nations must face. The
+      industry and private individuals – such as private heating system owners –
+      must also find ways of reducing CO2 emissions Using Technology and Data.
+      It's Cost-effective but will pay off after a certain time by producing
+      abundant value by adding carbon fibers, Hydrogen, Graphene Composites,
+      Mxenes, and other carbon allotropes for recreating Product and Application
+      Development from an advanced material science perspective.
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+ <div
+  class="container-fluid wow fadeIn"
+  data-wow-duration="1s"
+  data-wow-delay="0.7s"
+ >
+  <div class="row">
+   <div class="col-lg-12">
+    <div class="loop owl-carousel">
+     <div class="item">
+      <a href="https://www.vizagsteel.com/">
+       <div class="portfolio-item">
+        <div class="thumb">
+         <img src="https://www.vizagsteel.com/photos/logonew.jpg" alt="" />
+        </div>
+        <div class="down-content">
+         <h4>Visakhapatnam Steel Plant</h4>
+         <span><a href="https://www.vizagsteel.com/">vizagsteel.com</a></span>
+        </div>
+       </div>
+      </a>
+     </div>
+
+     <div class="item">
+      <a href="https://www.hindustanpetroleum.com/">
+       <div class="portfolio-item">
+        <div class="thumb">
+         <img src="https://www.hindustanpetroleum.com/images/logo.png" alt="" />
+        </div>
+        <div class="down-content">
+         <h4>Hindustan Petroleum Corporation Limited</h4>
+         <span
+          ><a href="https://www.hindustanpetroleum.com/"
+           >hindustanpetroleum.com</a
+          ></span
+         >
+        </div>
+       </div>
+      </a>
+     </div>
+
+     <div class="item">
+      <a href="https://www.ntpc.co.in/">
+       <div class="portfolio-item">
+        <div class="thumb">
+         <img
+          src="https://www.ntpc.co.in/sites/all/themes/ntpc/images/ntpc-logo.svg"
+          alt=""
+         />
+        </div>
+        <div class="down-content">
+         <h4>National Thermal Power Corporation Pvt Ltd</h4>
+         <span><a href="https://www.ntpc.co.in/">ntpc.co.in</a></span>
+        </div>
+       </div>
+      </a>
+     </div>
+
+     <div class="item">
+      <a href="https://www.hslvizag.in/">
+       <div class="portfolio-item">
+        <div class="thumb">
+         <img src="https://www.hslvizag.in/images/hsl-logo-trans.png" alt="" />
+        </div>
+        <div class="down-content">
+         <h4>Hindustan Shipyard Limited</h4>
+         <span><a href="https://www.hslvizag.in/">ntpc.co.in</a></span>
+        </div>
+       </div>
+      </a>
+     </div>
+
+     <div class="item">
+      <a href="https://vizagport.com/">
+       <div class="portfolio-item">
+        <div class="thumb">
+         <img src="https://vizagport.com/assets/images/h3logo.png" alt="" />
+        </div>
+        <div class="down-content">
+         <h4>Visakhapatnam Port Trust</h4>
+         <span><a href="https://vizagport.com/">vizagport.com</a></span>
+        </div>
+       </div>
+      </a>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
+
+<div id="services" class="services section">
+ <div class="container">
+  <div class="row">
+   <div class="col-lg-12">
+    <div
+     class="section-heading wow fadeInDown"
+     data-wow-duration="1s"
+     data-wow-delay="0.5s"
+    >
+     <h4>Our <em>Solution</em></h4>
+     <div class="line-dec"></div>
+    </div>
+   </div>
+   <div class="col-lg-12">
+    <div class="naccs">
+     <div class="grid">
+      <div class="row">
+       <div class="col-lg-12">
+        <div class="menu">
+         <div class="first-thumb active">
+          <div class="thumb">
+           <span class="icon"
+            ><img src="assets/images/service-icon-01.png" alt=""
+           /></span>
+           Health Care
+          </div>
+         </div>
+         <!-- <div>
+          <div class="thumb">
+           <span class="icon"
+            ><img src="assets/images/service-icon-02.png" alt=""
+           /></span>
+           Food &amp; Life
+          </div>
+         </div>
+         <div>
+          <div class="thumb">
+           <span class="icon"
+            ><img src="assets/images/service-icon-03.png" alt=""
+           /></span>
+           Cars
+          </div>
+         </div>
+         <div>
+          <div class="thumb">
+           <span class="icon"
+            ><img src="assets/images/service-icon-04.png" alt=""
+           /></span>
+           Shopping
+          </div>
+         </div>
+         <div class="last-thumb">
+          <div class="thumb">
+           <span class="icon"
+            ><img src="assets/images/service-icon-01.png" alt=""
+           /></span>
+           Traveling
+          </div>
+         </div> -->
+        </div>
+       </div>
+       <div class="col-lg-12">
+        <ul class="nacc">
+         <li class="active">
+          <div>
+           <div class="thumb">
+            <div class="row">
+             <div class="col-lg-6 align-self-center">
+              <div class="left-text">
+               <h4>Health Care</h4>
+               <p>
+                Solving Health Care by providing new biomaterials, and
+                technology to existing Health Care Lab and point of care patient
+                diagnostics Chronic diseases management with a focus on
+                pulmonary conditions Cancer diagnostics and treatment progress
+                E-health devices, biosensors, microfluidics, organ-on-chip
+                applications, and services.
+               </p>
+              </div>
+             </div>
+             <div class="col-lg-6 align-self-center">
+              <div class="right-image">
+               <img src="./assets/images/svg/healthcare.svg" alt="" />
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </li>
+         <li>
+          <div>
+           <div class="thumb">
+            <div class="row">
+             <div class="col-lg-6 align-self-center">
+              <div class="left-text">
+               <h4>Healthy Food &amp; Life</h4>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
+                doerski token. dover lipsum lorem and the others.
+               </p>
+               <div class="ticks-list">
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+               </div>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt.
+               </p>
+              </div>
+             </div>
+             <div class="col-lg-6 align-self-center">
+              <div class="right-image">
+               <img src="assets/images/services-image-02.jpg" alt="" />
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </li>
+         <li>
+          <div>
+           <div class="thumb">
+            <div class="row">
+             <div class="col-lg-6 align-self-center">
+              <div class="left-text">
+               <h4>Car Re-search &amp; Transport</h4>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
+                doerski token. dover lipsum lorem and the others.
+               </p>
+               <div class="ticks-list">
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+               </div>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt.
+               </p>
+              </div>
+             </div>
+             <div class="col-lg-6 align-self-center">
+              <div class="right-image">
+               <img src="assets/images/services-image-03.jpg" alt="" />
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </li>
+         <li>
+          <div>
+           <div class="thumb">
+            <div class="row">
+             <div class="col-lg-6 align-self-center">
+              <div class="left-text">
+               <h4>Online Shopping &amp; Tracking ID</h4>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
+                doerski token. dover lipsum lorem and the others.
+               </p>
+               <div class="ticks-list">
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+               </div>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt.
+               </p>
+              </div>
+             </div>
+             <div class="col-lg-6 align-self-center">
+              <div class="right-image">
+               <img src="assets/images/services-image-04.jpg" alt="" />
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </li>
+         <li>
+          <div>
+           <div class="thumb">
+            <div class="row">
+             <div class="col-lg-6 align-self-center">
+              <div class="left-text">
+               <h4>Enjoy &amp; Travel</h4>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
+                doerski token. dover lipsum lorem and the others.
+               </p>
+               <div class="ticks-list">
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Data Info</span>
+                <span><i class="fa fa-check"></i> SEO Analysis</span>
+                <span><i class="fa fa-check"></i> Optimized Template</span>
+               </div>
+               <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
+                eiusmod deis tempor incididunt.
+               </p>
+              </div>
+             </div>
+             <div class="col-lg-6 align-self-center">
+              <div class="right-image">
+               <img src="assets/images/services-image.jpg" alt="" />
+              </div>
+             </div>
+            </div>
+           </div>
+          </div>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
