Some more changes

--- a/index.html
+++ b/index.html
@@ -418,3 +418,31 @@ title: Home
   </div>
  </div>
 </div>
+
+
+<!-- Resources required -->
+<div id="resources" class="services section">
+ <div class="container">
+  <div class="row">
+   <div class="col-lg-12">
+    <div
+     class="section-heading wow fadeInDown"
+     data-wow-duration="1s"
+     data-wow-delay="0.5s"
+    >
+     <h4>Required Resources</em></h4>
+     <div class="line-dec"></div>
+    </div>
+   </div> 
+   
+   <div class="col-lg-3">
+    <div class=resourcesCard">
+    <img src="">
+    <h3>
+        Carbon Capture Storage Technology from Various Partners
+    </h3>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
