Some more updates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@ title: Home
       >
        <div class="row">
         <div class="col-lg-12">
-         <!-- <h6>Sustainable Multi disciplinary</h6> -->
-         <h2>De-industrialization anti-industrialism</h2>
+         <h2>De-industrialization & anti-industrialism</h2>
          <p>
           We are a Startup based out of Visakhapatnam India Working in
           sustainable multidisciplinary verticals Such as Health Care Point of
@@ -36,7 +35,7 @@ title: Home
         </div>
         <div class="col-lg-12">
          <div class="border-first-button scroll-to-section">
-          <a href="#contact">Contact Us</a>
+          <a href="mailto:venu@neolithicsystem.com">Contact Us</a>
          </div>
         </div>
        </div>
@@ -82,8 +81,8 @@ title: Home
       industry and private individuals – such as private heating system owners –
       must also find ways of reducing CO2 emissions Using Technology and Data.
       It's Cost-effective but will pay off after a certain time by producing
-      abundant value by adding carbon fibers, Hydrogen, Graphene Composites,
-      Mxenes, and other carbon allotropes for recreating Product and Application
+      abundant value by adding products of carbon fibers, Hydrogen, Graphene Composites,
+      Mxenes, and other carbon allotropes by producing lab and commercial production for recreating Product and Application
       Development from an advanced material science perspective.
      </div>
     </div>
@@ -174,6 +173,21 @@ title: Home
        </div>
       </a>
      </div>
+
+     <!-- AMTZ -->
+
+    <div class="item">
+        <a href="https://www.amtz.in/">
+        <div class="portfolio-item">
+            <div class="thumb">
+            <img src="https://www.amtz.in/static/img/logo/logo.png" alt="" />
+            </div>
+            <div class="down-content">
+            <h4>Andhra Pradesh Medtech Zone</h4>
+            <span><a href="https://www.amtz.in/">amtz.in</a></span>
+            </div>
+        </div>
+        </a>
     </div>
    </div>
   </div>
