Some sections added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ title: Home
     <div class="loop owl-carousel">
      <div class="item">
       <a href="https://www.vizagsteel.com/">
-       <div class="portfolio-item">
+       <div class="portfolio-item customCards">
         <div class="thumb">
          <img src="https://www.vizagsteel.com/photos/logonew.jpg" alt="" />
         </div>
@@ -115,7 +115,7 @@ title: Home
       <a href="https://www.hindustanpetroleum.com/">
        <div class="portfolio-item">
         <div class="thumb">
-         <img src="https://www.hindustanpetroleum.com/images/logo.png" alt="" />
+         <img src="./assets/images/logo/hpl.png" alt="" />
         </div>
         <div class="down-content">
          <h4>Hindustan Petroleum Corporation Limited</h4>
@@ -134,7 +134,7 @@ title: Home
        <div class="portfolio-item">
         <div class="thumb">
          <img
-          src="https://www.ntpc.co.in/sites/all/themes/ntpc/images/ntpc-logo.svg"
+          src="./assets/images/logo/ntpc.png"
           alt=""
          />
         </div>
@@ -150,7 +150,7 @@ title: Home
       <a href="https://www.hslvizag.in/">
        <div class="portfolio-item">
         <div class="thumb">
-         <img src="https://www.hslvizag.in/images/hsl-logo-trans.png" alt="" />
+         <img src="./assets/images/logo/hsl.png" alt="" />
         </div>
         <div class="down-content">
          <h4>Hindustan Shipyard Limited</h4>
@@ -164,7 +164,7 @@ title: Home
       <a href="https://vizagport.com/">
        <div class="portfolio-item">
         <div class="thumb">
-         <img src="https://vizagport.com/assets/images/h3logo.png" alt="" />
+         <img src="./assets/images/logo/vpt.jpg" alt="" />
         </div>
         <div class="down-content">
          <h4>Visakhapatnam Port Trust</h4>
@@ -174,21 +174,6 @@ title: Home
       </a>
      </div>
 
-     <!-- AMTZ -->
-
-    <div class="item">
-        <a href="https://www.amtz.in/">
-        <div class="portfolio-item">
-            <div class="thumb">
-            <img src="https://www.amtz.in/static/img/logo/logo.png" alt="" />
-            </div>
-            <div class="down-content">
-            <h4>Andhra Pradesh Medtech Zone</h4>
-            <span><a href="https://www.amtz.in/">amtz.in</a></span>
-            </div>
-        </div>
-        </a>
-    </div>
    </div>
   </div>
  </div>
@@ -215,28 +200,30 @@ title: Home
         <div class="menu">
          <div class="first-thumb active">
           <div class="thumb">
-           <span class="icon"
+           <!-- <span class="icon"
             ><img src="assets/images/service-icon-01.png" alt=""
-           /></span>
+           /></span> -->
            Health Care
-          </div>
-         </div>
-         <!-- <div>
-          <div class="thumb">
-           <span class="icon"
-            ><img src="assets/images/service-icon-02.png" alt=""
-           /></span>
-           Food &amp; Life
           </div>
          </div>
          <div>
           <div class="thumb">
-           <span class="icon"
-            ><img src="assets/images/service-icon-03.png" alt=""
-           /></span>
-           Cars
+           <!-- <span class="icon"
+            ><img src="assets/images/service-icon-02.png" alt=""
+           /></span> -->
+           Automotive
           </div>
          </div>
+         <div>
+          <div class="thumb">
+           <!-- <span class="icon"
+            ><img src="assets/images/service-icon-03.png" alt=""
+           /></span> -->
+           Energy Efficiency
+          </div>
+         </div>
+
+         <!--
          <div>
           <div class="thumb">
            <span class="icon"
@@ -289,29 +276,18 @@ title: Home
             <div class="row">
              <div class="col-lg-6 align-self-center">
               <div class="left-text">
-               <h4>Healthy Food &amp; Life</h4>
+               <h4>Automotive Applications</h4>
                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
-                doerski token. dover lipsum lorem and the others.
-               </p>
-               <div class="ticks-list">
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-               </div>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt.
+                Remanfacturing Internal Combustion Engine Vehicles to Fuel Cell Electric Vehicles Work Using Hydrogen.
+ The abundance of hydrogen in the universe means that hydrogen fuel cells are a renewable source of energy. They are also a clean method of energy production, although there are still some concerns over the use of fossil fuels for hydrogen extraction as well as the potential carbon footprint associated with hydrogen transportation, for example.
+However, hydrogen fuel cell technology has the potential to be a completely green and renewable source of power, with the only by-products being heat (which can be used elsewhere) and water.
+In addition, fuel cells do not run down or need recharging like batteries, so long as there is a constant source of fuel and oxygen.
                </p>
               </div>
              </div>
              <div class="col-lg-6 align-self-center">
               <div class="right-image">
-               <img src="assets/images/services-image-02.jpg" alt="" />
+               <img src="./assets/images/automotive.svg" alt="" />
               </div>
              </div>
             </div>
@@ -324,29 +300,19 @@ title: Home
             <div class="row">
              <div class="col-lg-6 align-self-center">
               <div class="left-text">
-               <h4>Car Re-search &amp; Transport</h4>
+               <h4>Solving Energy Efficiency</h4>
                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt ut labore et dolore kengan darwin
-                doerski token. dover lipsum lorem and the others.
-               </p>
-               <div class="ticks-list">
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Data Info</span>
-                <span><i class="fa fa-check"></i> SEO Analysis</span>
-                <span><i class="fa fa-check"></i> Optimized Template</span>
-               </div>
-               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do
-                eiusmod deis tempor incididunt.
+                Energy Harvesting
+Building Domestic Grids in Connected Network source from renewable energy.
+Floating solar farms (floatovoltaics) are cheaper to install and can produce more power than land-based solar panels due to the cooling effect of water.
+Building-integrated solar tech allows us to incorporate solar panel production into the architecture of a building.
+Photovoltaic noise barriers / Solar noise barriers can be used on roads and highways to generate solar power while reducing noise pollution.
                </p>
               </div>
              </div>
              <div class="col-lg-6 align-self-center">
               <div class="right-image">
-               <img src="assets/images/services-image-03.jpg" alt="" />
+               <img src="./assets/images/energy.svg" alt="" />
               </div>
              </div>
             </div>
@@ -444,19 +410,136 @@ title: Home
      data-wow-duration="1s"
      data-wow-delay="0.5s"
     >
-     <h4>Required Resources</em></h4>
+     <h4>Solutions Provided</em></h4>
      <div class="line-dec"></div>
     </div>
    </div> 
    
-   <div class="col-lg-3">
-    <div class=resourcesCard">
-    <img src="">
-    <h3>
-        Carbon Capture Storage Technology from Various Partners
-    </h3>
+   <div class="row">
+    <div class="col-lg-12">
+     <div class="loop owl-carousel">
+      <div class="item">
+        <div class="portfolio-item customCards">
+         <div class="down-content">
+          <h5>
+            <br>
+            Clinical Trials,
+Community Awareness.
+Education,
+Workshops
+          </h5>
+         </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="portfolio-item customCards">
+         <div class="down-content">
+          <h5>
+            <br>Cellular Agriculture
+            BioTechnology
+            Regenerative Medicine.
+            Tissue Engineering
+            </h5>
+         </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="portfolio-item customCards">
+         <div class="down-content">
+          <h5><br>Public Transportation
+            and Commute Electrification.</h5>
+         </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="portfolio-item customCards">
+         <div class="down-content">
+          <h5><br>Infrastructure Development</h5>
+         </div>
+        </div>
+      </div>
+ 
     </div>
    </div>
   </div>
  </div>
 </div>
+</div>
+
+<!-- Resources required -->
+<div id="resources" class="services section">
+  <div class="container">
+   <div class="row">
+    <div class="col-lg-12">
+     <div
+      class="section-heading wow fadeInDown"
+      data-wow-duration="1s"
+      data-wow-delay="0.5s"
+     >
+      <h4>Resources Required</em></h4>
+      <div class="line-dec"></div>
+     </div>
+    </div> 
+    
+    <div class="row">
+     <div class="col-lg-12">
+      <div class="loop owl-carousel">
+       <div class="item">
+         <div class="portfolio-item customCards">
+          <div class="down-content">
+           <h5>
+             <br>
+             Carbon Capture Storage
+             Technology from Various Partners
+           </h5>
+          </div>
+         </div>
+       </div>
+ 
+       <div class="item">
+         <div class="portfolio-item customCards">
+          <div class="down-content">
+           <h5>
+             <br>R&D , Lab, for Rapid Prototyping and Additive Manufacturing,
+             3d Bioprinters
+             Technology Transfer,
+             Blueprint</h5>
+          </div>
+         </div>
+       </div>
+ 
+       <div class="item">
+         <div class="portfolio-item customCards">
+          <div class="down-content">
+           <h5><br>Smart Manufacturing Unit For Automotive and Energy Storage Solutions. IIOT.</h5>
+          </div>
+         </div>
+       </div>
+ 
+       <div class="item">
+         <div class="portfolio-item customCards">
+          <div class="down-content">
+           <h5><br>Proper Funding VC Back Up, Government, Start Up India, IP, Business model.</h5>
+          </div>
+         </div>
+       </div>
+  
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="partnersCard">
+            <img src="https://www.ccamp.res.in/sites/default/files/CCAMP.png">
+          </div>
+        </div>
+    </div>
+  </div>
